test/corpus/builtin_handlers.txt
================================================================================
mv in call form with a handler
================================================================================

mv(a, b) failed { echo "no" }

--------------------------------------------------------------------------------

(source_file
  (mv_stmt
    (parameter_list
      (variable)
      (variable))
    (handler
      (handler_failed
        (block
          (builtin_stmt
            (string
              (string_content))))))))

================================================================================
cd with a handler
================================================================================

cd "/tmp" failed { echo "no" }

--------------------------------------------------------------------------------

(source_file
  (builtin_stmt
    (string
      (string_content))
    (handler
      (handler_failed
        (block
          (builtin_stmt
            (string
              (string_content))))))))

================================================================================
mv in bare form is unaffected
================================================================================

mv "a", "b"

--------------------------------------------------------------------------------

(source_file
  (mv_stmt
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
cd without a handler is unaffected
================================================================================

cd "/tmp"

--------------------------------------------------------------------------------

(source_file
  (builtin_stmt
    (string
      (string_content))))
