test/corpus/command_modifiers.txt
================================================================================
suppress modifier on a command
================================================================================

suppress $ echo x $

--------------------------------------------------------------------------------

(source_file
  (unop
    (command
      (command_content))))

================================================================================
silent modifier on a command is unaffected
================================================================================

silent $ echo x $

--------------------------------------------------------------------------------

(source_file
  (unop
    (command
      (command_content))))

================================================================================
suppress combined with another modifier
================================================================================

suppress trust $ echo x $

--------------------------------------------------------------------------------

(source_file
  (unop
    (unop
      (command
        (command_content)))))

================================================================================
suppress modifier block
================================================================================

suppress { $ echo x $ }

--------------------------------------------------------------------------------

(source_file
  (command_modifier_block
    (block
      (command
        (command_content)))))

================================================================================
trust modifier block is unaffected
================================================================================

trust { $ echo x $ }

--------------------------------------------------------------------------------

(source_file
  (command_modifier_block
    (block
      (command
        (command_content)))))
