test/corpus/metavariables.txt
================================================================================
Pattern metavariable in a return type
================================================================================

fun N(A): T { B }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (variable)
    parameters: (function_parameter_list
      (function_parameter_list_item
        (variable)))
    (type_name
      (type_name_symbol))
    body: (block
      (variable))))

================================================================================
Pattern metavariable in an array failable return type
================================================================================

fun N(): [T]? { B }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (variable)
    parameters: (function_parameter_list)
    (type_name
      (type_name_symbol))
    body: (block
      (variable))))

================================================================================
Pattern metavariables as variables
================================================================================

let X = Y

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (variable))))

================================================================================
Pattern command delimiters
================================================================================

 ls 

--------------------------------------------------------------------------------

(source_file
  (command
    (command_content)))

================================================================================
Pattern command with a trailing metavariable list
================================================================================

 ls X 

--------------------------------------------------------------------------------

(source_file
  (command
    (command_content)
    (variable)))

================================================================================
Pattern command with a failed handler
================================================================================

 touch  failed { B }

--------------------------------------------------------------------------------

(source_file
  (command
    (command_content)
    (handler
      (handler_failed
        (block
          (variable))))))

================================================================================
Pattern command with an escaped delimiter
================================================================================

 echo \HOME 

--------------------------------------------------------------------------------

(source_file
  (command
    (command_content)
    (escape_sequence)
    (command_content)))
