test/corpus/ranges.txt
================================================================================
Exclusive range in a for loop
================================================================================

main {
    for i in 0..count {
        echo i
    }
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (for_loop
        (variable)
        (range
          (number)
          (variable))
        (block
          (builtin_stmt
            (variable)))))))

================================================================================
Inclusive range
================================================================================

main {
    for i in 0..=10 {
        echo i
    }
}

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (for_loop
        (variable)
        (range
          (number)
          (number))
        (block
          (builtin_stmt
            (variable)))))))
