test/corpus/status.txt
================================================================================
Status in call form
================================================================================

const a = status()

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (status))))

================================================================================
Bare status is unaffected
================================================================================

const a = status

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (status))))
