test/corpus/test_blocks.txt
================================================================================
Named test block
================================================================================

test "a name" { echo "x" }

--------------------------------------------------------------------------------

(source_file
  (test_block
    (string
      (string_content))
    (block
      (builtin_stmt
        (string
          (string_content))))))

================================================================================
Unnamed test block
================================================================================

test { echo "x" }

--------------------------------------------------------------------------------

(source_file
  (test_block
    (block
      (builtin_stmt
        (string
          (string_content))))))

================================================================================
Main block is unaffected
================================================================================

main { echo "x" }

--------------------------------------------------------------------------------

(source_file
  (main_block
    (block
      (builtin_stmt
        (string
          (string_content))))))
