test/corpus/visibility.txt
================================================================================
Public constant
================================================================================

pub const NAME = "value"

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (string
        (string_content)))))

================================================================================
Public mutable variable
================================================================================

pub let counter = 0

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (number))))

================================================================================
Private constant is unaffected
================================================================================

const NAME = "value"

--------------------------------------------------------------------------------

(source_file
  (variable_init
    (variable_assignment
      (variable)
      (string
        (string_content)))))
